[package]
edition = "2024"
name = "esp-wmata-pids"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "esp-wmata-pids"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { git = "https://github.com/esp-rs/esp-hal/", package = "esp-hal", rev = "4ee9a976a8b233e28407d0b59ce0c954f069647b", features = [
  "defmt",
  "esp32",
  "unstable",
] }

esp-rtos = { git = "https://github.com/esp-rs/esp-hal/", package = "esp-rtos", rev = "4ee9a976a8b233e28407d0b59ce0c954f069647b", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal/", package = "esp-bootloader-esp-idf", rev = "4ee9a976a8b233e28407d0b59ce0c954f069647b", features = [
  "defmt",
  "esp32",
] }

embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal/", package = "esp-alloc", rev = "4ee9a976a8b233e28407d0b59ce0c954f069647b", features = [
  "defmt",
] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal/", package = "esp-backtrace", rev = "4ee9a976a8b233e28407d0b59ce0c954f069647b", features = [
  "defmt",
  "esp32",
  "panic-handler",
] }
esp-println = { git = "https://github.com/esp-rs/esp-hal/", package = "esp-println", rev = "4ee9a976a8b233e28407d0b59ce0c954f069647b", features = [
  "defmt-espflash",
  "esp32",
] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal/", package = "esp-radio", rev = "4ee9a976a8b233e28407d0b59ce0c954f069647b", features = [
  "defmt",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "unstable",
  "wifi",
] }
esp-storage = { git = "https://github.com/esp-rs/esp-hal/", package = "esp-storage", rev = "4ee9a976a8b233e28407d0b59ce0c954f069647b", features = [
  "esp32",
  "defmt",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

thiserror = { version = "2.0.17", default-features = false }
critical-section = "1.2.0"
static_cell = "2.1.1"
reqwless = { version = "0.13.0", features = ["defmt"] }
miniserde = { version = "0.1.43", default-features = false }
embedded-nal-async = "0.8.0"
bitflags = "2.10.0"
smallvec = "1.15.1"
const_format = "0.2.35"
heapless = "0.9.2"
enumset = { version = "1.1.10", features = ["defmt"] }
embedded-storage = "0.3.1"
crc32fast = { version = "1.5.0", default-features = false }


# cargo doesnt let us set release as the default profile
# so we just make debug behave like release
[profile.dev]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
